[gd_scene load_steps=2 format=3 uid="uid://dw8k3h7mjx2pn_updated"]

[ext_resource type="Script" path="res://scenes/ui/components/ItemCard.gd" id="1_itemcard"]

[node name="ItemCard" type="PanelContainer"]
custom_minimum_size = Vector2(150, 180)
script = ExtResource("1_itemcard")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Item Name"
horizontal_alignment = 1

[node name="QuantityLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "x1"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12

[node name="PriceLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "ðŸ’° 100"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="PurchaseButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SatÄ±n Al"

[node name="EnhancementLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "+5"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 16

[node name="RarityIndicator" type="ColorRect" parent="."]
layout_mode = 2
color = Color(1, 1, 1, 1)
